made the contact page and improved the site for mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Montserrat', sans-serif;
-    padding: 20px 60px;
+    padding: 20px 60px;    
 }
 
 a{
@@ -12,3 +12,10 @@ a{
     box-sizing: border-box;
 }
 
+
+
+@media screen and (max-width: 800px){
+    body{
+        padding: 10px;
+    }
+}
