--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -22,6 +22,9 @@
 
   &.large{
     height: 380px;
+    @media screen and (max-width: 800px){
+      height: 200px;   
+    }
   }
 
   &:first-child {
@@ -41,7 +44,7 @@
 
   .content {
     height: 90px;
-    padding: 0 25px;
+    padding: 0 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,6 +53,10 @@
     background-color: white;
     opacity: 0.7;
     position: absolute;
+
+    @media screen and (max-width:800px) {
+      padding: 0 5px;
+    }
 
     .title {
       font-weight: bold;
@@ -62,5 +69,8 @@
       font-weight: lighter;
       font-size: 16px;
     }
+  }
+  @media screen and (max-width: 800px){
+    height: 200px;   
   }
 }
