--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -10,4 +10,7 @@
         display: flex;
         justify-content: space-between;
     }
+    @media screen and (max-width:800px) {
+        width: auto;
+    }
 }
