--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -16,6 +16,9 @@
     .header-block {
       text-transform: capitalize;
       width: 23%;
+      @media screen and (max-width:800px) {
+        font-size: 12px;
+      }
 
       &:last-child {
         width: 8%;
@@ -38,5 +41,8 @@
     margin-top: 24px;
     font-size: 24px;
     color:red;
+  }
+  @media screen and (max-width:800px) {
+    width: 90%;
   }
 }
