--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -1,6 +1,8 @@
 .collection-page {
   display: flex;
   flex-direction: column;
+  align-items: center;
+
 
   .title {
     font-size: 38px;
@@ -14,6 +16,10 @@
 
     & .collection-item {
       margin-bottom: 30px;
+    }
+    @media screen and (max-width:800px) {
+      grid-template-columns: repeat(2, 1fr); 
+      gap: 30px;
     }
   }
 }
